--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "react-native-gesture-handler": "~1.6.0",
     "react-native-safe-area-context": "3.0.2",
     "react-native-screens": "~2.9.0",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
@@ -39,6 +41,7 @@
     "@types/react-native": "~0.62.13",
     "babel-preset-expo": "~8.1.0",
     "jest-expo": "~38.0.0",
+    "redux-devtools": "^3.5.0",
     "typescript": "~3.9.5"
   },
   "private": true
