--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^0.2.9",
     "@expo-google-fonts/open-sans": "^0.1.0",
     "@expo/vector-icons": "^10.0.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.6.1",
+    "@react-navigation/drawer": "^5.8.4",
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
+    "@types/react-redux": "^7.1.9",
+    "aws-amplify": "^3.0.18",
+    "aws-appsync": "^3.0.4",
     "expo": "^38.0.3",
     "expo-asset": "~8.1.7",
     "expo-constants": "~9.1.1",
@@ -26,16 +31,17 @@
     "expo-splash-screen": "~0.3.1",
     "expo-status-bar": "^1.0.0",
     "expo-web-browser": "~8.3.1",
+    "graphql-tag": "^2.10.3",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-hook-form": "^5.7.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "3.0.2",
     "react-native-screens": "~2.9.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.4.0",
-    "react-navigation-stack": "^2.8.2",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5"
   },
