--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "expo-status-bar": "^1.0.0",
     "expo-web-browser": "~8.3.1",
     "graphql-tag": "^2.10.3",
+    "modal-react-native-web": "^0.2.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-hook-form": "^5.7.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-modal": "^11.5.6",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "3.0.2",
     "react-native-screens": "~2.9.0",
