--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "noEmit": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
-    "strict": true
-  }
+    "strict": true,
+  },
+  "exclude": ["**/__mocks__/*", "../../node_modules", "build", "src/**/*.test.ts", "src/**/*.test.tsx"]
 }
