--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@expo-google-fonts/open-sans": "^0.1.0",
     "@expo/vector-icons": "^10.0.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/netinfo": "5.9.2",
     "@react-navigation/bottom-tabs": "^5.6.1",
     "@react-navigation/drawer": "^5.8.4",
     "@react-navigation/native": "^5.6.1",
@@ -23,24 +24,24 @@
     "@types/react-redux": "^7.1.9",
     "aws-amplify": "^3.0.18",
     "aws-appsync": "^3.0.4",
-    "expo": "^38.0.3",
+    "expo": "^38.0.0",
     "expo-asset": "~8.1.7",
     "expo-constants": "~9.1.1",
     "expo-font": "~8.2.1",
     "expo-linking": "^1.0.1",
-    "expo-splash-screen": "~0.3.1",
+    "expo-splash-screen": "^0.3.1",
     "expo-status-bar": "^1.0.0",
     "expo-web-browser": "~8.3.1",
     "graphql-tag": "^2.10.3",
     "modal-react-native-web": "^0.2.0",
-    "react": "~16.11.0",
-    "react-dom": "~16.11.0",
+    "react": "16.11.0",
+    "react-dom": "16.11.0",
     "react-hook-form": "^5.7.2",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-modal": "^11.5.6",
-    "react-native-reanimated": "^1.9.0",
-    "react-native-safe-area-context": "3.0.2",
+    "react-native-reanimated": "~1.9.0",
+    "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.4.0",
@@ -49,10 +50,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
-    "@types/react": "~16.9.23",
+    "@types/react": "~16.9.41",
     "@types/react-native": "~0.62.13",
-    "babel-preset-expo": "~8.1.0",
-    "jest-expo": "~38.0.0",
+    "babel-preset-expo": "^8.2.3",
+    "jest-expo": "^38.0.0",
     "redux-devtools": "^3.5.0",
     "typescript": "~3.9.5"
   },
