--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo-constants": "~9.1.1",
     "expo-font": "~8.2.1",
     "expo-linking": "^1.0.1",
+    "expo-screen-orientation": "~1.1.1",
     "expo-splash-screen": "^0.3.1",
     "expo-status-bar": "^1.0.0",
     "expo-web-browser": "~8.3.1",
