Added cache image and updated publisher screen

--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "@react-navigation/drawer": "^5.8.4",
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
+    "@types/crypto-js": "^3.1.47",
+    "@types/lodash": "^4.14.158",
     "@types/react-redux": "^7.1.9",
     "aws-amplify": "^3.0.18",
     "aws-appsync": "^3.0.4",
-    "expo": "^38.0.0",
+    "expo": "^38.0.8",
     "expo-asset": "~8.1.7",
+    "expo-blur": "^8.1.2",
     "expo-camera": "~8.3.1",
     "expo-constants": "~9.1.1",
     "expo-font": "~8.2.1",
@@ -35,6 +38,7 @@
     "expo-status-bar": "^1.0.0",
     "expo-web-browser": "~8.3.1",
     "graphql-tag": "^2.10.3",
+    "lodash": "^4.17.19",
     "modal-react-native-web": "^0.2.0",
     "react": "16.11.0",
     "react-dom": "16.11.0",
