--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-camera": "~8.3.1",
     "expo-constants": "~9.1.1",
     "expo-font": "~8.2.1",
+    "expo-linear-gradient": "~8.2.1",
     "expo-linking": "^1.0.1",
     "expo-screen-orientation": "~1.1.1",
     "expo-splash-screen": "^0.3.1",
@@ -46,6 +47,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-modal": "^11.5.6",
+    "react-native-qrcode-svg": "^6.0.6",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
