--- a/app.json
+++ b/app.json
@@ -4,11 +4,11 @@
     "slug": "PortalsMobileApp",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./src/assets/images/icon.png",
+    "icon": "./src/assets/images/app_icons/2x/Portals@2x.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "splash": {
-      "image": "./src/assets/images/splash.png",
+      "image": "./src/assets/images/app_icons/3x/Portals@2x.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -22,7 +22,7 @@
       "supportsTablet": true
     },
     "web": {
-      "favicon": "./src/assets/images/favicon.png"
+      "favicon": "./src/assets/images/app_icons/1x/Portals.png"
     }
   }
 }
