--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Portals",
-    "slug": "Portals",
+    "name": "Portals.net",
+    "slug": "Portals.net",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./src/assets/images/app_icons/2x/Portals@2x.png",
@@ -22,7 +22,7 @@
       "supportsTablet": true
     },
     "web": {
-      "favicon": "./src/assets/images/app_icons/1x/Portals.png"
+      "favicon": "./src/assets/images/app_icons/1x/icon.png"
     }
   }
 }
