--- a/package.json
+++ b/package.json
@@ -49,9 +49,11 @@
     "react-native-modal": "^11.5.6",
     "react-native-qrcode-svg": "^6.0.6",
     "react-native-reanimated": "~1.9.0",
+    "react-native-render-html": "^4.2.4",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-web": "~0.11.7",
+    "react-native-webview": "9.4.0",
     "react-navigation": "^4.4.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5"
