--- a/amplify.yml
+++ b/amplify.yml
@@ -19,6 +19,13 @@ frontend:
     baseDirectory: web-build
     files:
       - '**/*'
+  customHeaders:
+    - pattern: '.well-known/apple-app-site-association'
+      headers: 
+        - key: 'Content-Type'
+          value: 'application/json'
+        - key: 'X-Content-Type-Options'
+          value: 'nosniff'
   cache:
     paths:
       - node_modules/**/*
