--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 include: [".well-known"]
-theme: jekyll-theme-cayman
+##theme: jekyll-theme-cayman
 ## plugins:
 ##   - jekyll-redirect-from
 ## whitelist:
